--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "clase1",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-     "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build-css": "node-sass --include-path scss scss/main.scss css/main.css",
-		"watch-css": "nodemon -e scss -x \"npm     run build-css\""
+    "watch-css": "nodemon -e scss -x \"npm     run build-css\""
   },
   "repository": {
     "type": "git",
@@ -21,5 +20,6 @@
   "devDependencies": {
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.19"
-  }
+  },
+  "description": ""
 }
